--- a/acme_project/templates/birthday/birthday.html
+++ b/acme_project/templates/birthday/birthday.html
@@ -6,20 +6,23 @@
       Калькулятор ожидания дня рождения
     </div>
     <div class="card-body">      
-      <form>
+      <form method="POST">
+        {% csrf_token %}
         {% bootstrap_form form %}
         {% bootstrap_button button_type="submit" content="Отправить" %}
       </form>
+      {% with data=form.instance %}
+        {% if form.is_valid %}
+          ID новой записи в БД: {{ data.id }}
+          <hr>
+          <h2>Привет, {{ data.first_name }} {{ data.last_name }}</h2>
+          {% if birthday_countdown == 0 %}
+            С днём рождения!
+          {% else %}
+            Осталось дней до дня рождения: {{ birthday_countdown }}!
+          {% endif %}
+        {% endif %}
+      {% endwith %}
     </div>
   </div>
-  {% with data=request.GET %}
-    {% if form.is_valid %}
-      <h2>Привет, {{ data.first_name }} {{ data.last_name }}</h2>
-      {% if birthday_countdown == 0 %}
-        С днём рождения!
-      {% else %}
-        Осталось дней до дня рождения: {{ birthday_countdown }}!
-      {% endif %}
-    {% endif %}
-  {% endwith %}
 {% endblock %}
