--- a/acme_project/templates/birthday/birthday.html
+++ b/acme_project/templates/birthday/birthday.html
@@ -1,28 +1,33 @@
 {% extends "base.html" %}
 {% load django_bootstrap5 %}
 {% block content %}
-  <div class="card col-4">
-    <div class="card-header">
-      Калькулятор ожидания дня рождения
-    </div>
-    <div class="card-body">      
-      <form method="POST">
-        {% csrf_token %}
-        {% bootstrap_form form %}
-        {% bootstrap_button button_type="submit" content="Отправить" %}
-      </form>
-      {% with data=form.instance %}
-        {% if form.is_valid %}
-          ID новой записи в БД: {{ data.id }}
-          <hr>
-          <h2>Привет, {{ data.first_name }} {{ data.last_name }}</h2>
-          {% if birthday_countdown == 0 %}
-            С днём рождения!
-          {% else %}
-            Осталось дней до дня рождения: {{ birthday_countdown }}!
+  {% with data=form.instance %}
+    {% if '/edit/' in request.path %}
+      <h1>Редактировать запись {{ data.pk }}</h1>
+    {% else %}
+      <h1>Создать запись</h1>
+    {% endif %}
+    <div class="card col-4">
+      <div class="card-header">
+        Калькулятор ожидания дня рождения
+      </div>
+      <div class="card-body">      
+        <form method="POST">
+          {% csrf_token %}
+          {% bootstrap_form form %}
+          {% bootstrap_button button_type="submit" content="Отправить" %}
+        </form>
+          {% if form.is_valid %}
+            ID новой записи в БД: {{ data.id }}
+            <hr>
+            <h2>Привет, {{ data.first_name }} {{ data.last_name }}</h2>
+            {% if birthday_countdown == 0 %}
+              С днём рождения!
+            {% else %}
+              Осталось дней до дня рождения: {{ birthday_countdown }}!
+            {% endif %}
           {% endif %}
-        {% endif %}
-      {% endwith %}
+  {% endwith %}
     </div>
   </div>
 {% endblock %}
