--- a/acme_project/templates/birthday/birthday_list.html
+++ b/acme_project/templates/birthday/birthday_list.html
@@ -7,7 +7,12 @@
         {{ birthday.first_name }} {{ birthday.last_name }} - {{ birthday.birthday }}
       </div>
       <div>
-        <a href="{% url 'birthday:edit' birthday.id %}">Изменить запись</a>
+        <a href="{% url 'birthday:edit' birthday.id %}">
+          Изменить запись
+        </a>&emsp;
+        <a href="{% url 'birthday:delete' birthday.id %}">
+          Удалить запись
+        </a>
       </div>
       {% if not forloop.last %}
         <hr>
