Add custom handler 403

--- a/acme_project/templates/core/404.html
+++ b/acme_project/templates/core/404.html
@@ -5,7 +5,7 @@
   <h1>Custom 404</h1>
   <p>Страницы с адресом {{ request.path }} не существует</p>
   <div style="text-align: center;">
-    <img src="https://http.cat/[404]" alt="Ошибка 404">
+    <img src="https://http.cat/404" alt="Ошибка 404">
   </div>
   <hr>
   <a href="{% url 'pages:homepage' %}">Идите на главную</a>
